--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
+    "react-vertical-timeline-component": "^3.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
