--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
     "react-vertical-timeline-component": "^3.5.3",
+    "swiper": "^11.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
